{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 26,
  "lineage": "b917dd41-b0c5-2bff-d495-bbfc86b27b15",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkInterfaces/master-nic",
            "ip_configuration": [
              {
                "name": "master-ip-1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/publicIPAddresses/k8-master-pip",
                "subnet_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network/subnets/k8-network-subnet"
              }
            ],
            "location": "eastus",
            "name": "master-nic",
            "network_security_group_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "k8-resources"
          },
          "dependencies": [
            "azurerm_public_ip.master_pip",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-worker-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkInterfaces/worker-1-nic",
            "ip_configuration": [
              {
                "name": "worker-1-ip-1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/publicIPAddresses/k8-worker1-pip",
                "subnet_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network/subnets/k8-network-subnet"
              }
            ],
            "location": "eastus",
            "name": "worker-1-nic",
            "network_security_group_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "k8-resources"
          },
          "dependencies": [
            "azurerm_public_ip.worker-1_pip",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic-worker-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkInterfaces/worker-2-nic",
            "ip_configuration": [
              {
                "name": "worker-2-ip-1",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/publicIPAddresses/k8-worker2-pip",
                "subnet_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network/subnets/k8-network-subnet"
              }
            ],
            "location": "eastus",
            "name": "worker-2-nic",
            "network_security_group_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "k8-resources"
          },
          "dependencies": [
            "azurerm_public_ip.worker-2_pip",
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "master_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/publicIPAddresses/k8-master-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.186.25.57",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "k8-master-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "k8-resources",
            "sku": "Basic"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "worker-1_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/publicIPAddresses/k8-worker1-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.186.25.55",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "k8-worker1-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "k8-resources",
            "sku": "Basic"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "worker-2_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/publicIPAddresses/k8-worker2-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.186.25.19",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "k8-worker2-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "k8-resources",
            "sku": "Basic"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg",
            "location": "eastus",
            "name": "k8-nsg",
            "resource_group_name": "k8-resources",
            "security_rule": [],
            "tags": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-inbound",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg/securityRules/k8-ssh",
            "name": "k8-ssh",
            "network_security_group_name": "k8-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "k8-resources",
            "source_address_prefix": "88.27.137.22",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-inbound-http",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg/securityRules/k8-http",
            "name": "k8-http",
            "network_security_group_name": "k8-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "k8-resources",
            "source_address_prefix": "88.27.137.22",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-inbound-http-2",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "30000-40000",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg/securityRules/k8-http-2",
            "name": "k8-http-2",
            "network_security_group_name": "k8-nsg",
            "priority": 131,
            "protocol": "Tcp",
            "resource_group_name": "k8-resources",
            "source_address_prefix": "88.27.137.22",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-inbound-https",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "AzureCloud",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg/securityRules/k8-out-allow",
            "name": "k8-out-allow",
            "network_security_group_name": "k8-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "k8-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-inbound-rdp",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "4443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg/securityRules/k8-rdp",
            "name": "k8-rdp",
            "network_security_group_name": "k8-nsg",
            "priority": 140,
            "protocol": "Tcp",
            "resource_group_name": "k8-resources",
            "source_address_prefix": "GatewayManager",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network/subnets/k8-network-subnet",
            "name": "k8-network-subnet",
            "resource_group_name": "k8-resources",
            "virtual_network_name": "k8-network"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.k8s-resources",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet-nsg",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network/subnets/k8-network-subnet",
            "network_security_group_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/networkSecurityGroups/k8-nsg",
            "subnet_id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network/subnets/k8-network-subnet"
          },
          "dependencies": [
            "module.network.azurerm_network_security_group.nsg",
            "module.network.azurerm_resource_group.k8s-resources",
            "module.network.azurerm_subnet.subnet",
            "module.network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/a71861fe-99e9-421b-907b-7d8425c501d4/resourceGroups/k8-resources/providers/Microsoft.Network/virtualNetworks/k8-network",
            "location": "eastus",
            "name": "k8-network",
            "resource_group_name": "k8-resources"
          },
          "dependencies": [
            "module.network.azurerm_resource_group.k8s-resources"
          ]
        }
      ]
    }
  ]
}